bonus/app_repo/manifests/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wil-playground-ingress
  namespace: dev
spec:
  ingressClassName: traefik
  rules:
  - host: dev.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wil-playground-service
            port:
              number: 8888
---
